--- a/homework/Day_036_HW.ipynb
+++ b/homework/Day_036_HW.ipynb
@@ -31,6 +31,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sklearn.metrics import precision_score, recall_score, fbeta_score\n",
     "y_pred = np.random.randint(2, size=100)  # 生成 100 個隨機的 0 / 1 prediction\n",
     "y_true = np.random.randint(2, size=100)  # 生成 100 個隨機的 0 / 1 ground truth"
    ]
@@ -43,11 +44,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0,\n",
-       "       1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0,\n",
-       "       0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0,\n",
-       "       1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0])"
+       "array([0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1,\n",
+       "       1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0,\n",
+       "       1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0])"
       ]
      },
      "execution_count": 8,
@@ -58,6 +59,44 @@
    "source": [
     "y_pred"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_fbeta_score(y_true, y_pred, beta=1):\n",
+    "    precision = precision_score(y_true, y_pred) # 計算 Precision\n",
+    "    recall = recall_score(y_true, y_pred) # 計算 Recall\n",
+    "    \n",
+    "    fbeta = (1+ (beta)**2) * (precision*recall) / (((beta)**2*precision) + recall)\n",
+    "    return fbeta  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49242424242424243\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(custom_fbeta_score(y_true, y_pred, beta=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
