--- a/homework/Day_065_HW.ipynb
+++ b/homework/Day_065_HW.ipynb
@@ -16,7 +16,7 @@
     "collapsed": true
    },
    "source": [
-    "Learning rate:0.1,激活函數用Tanh,500次epoch，有機會將Test Loss降到 0.1以下"
+    "Learning rate:0.1,ReLu,500次epoch,Batch size:  13，有機會將Test Loss降到 0.004以下"
    ]
   },
   {
